--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Starfield</title>
+		<title>Zach's Starfield</title>
 		
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
@@ -10,7 +10,7 @@
 	<body>
 		<div class = 'page-wrap'>
 			<header>
-				<h1>Starfield</h1>
+				<h1>Swirly!!</h1>
 			</header>
 			<section id="content">
 				<canvas id="Starfield" data-processing-sources="Starfield.pde">
